--- a/package.json
+++ b/package.json
@@ -1,14 +1,12 @@
 {
   "name": "ActiveDirectory-Password-Change",
-  "version": "1.0.0",
-  "description": "<h1>ActiveDirectory-Password-Change</h1> <p><img src=\"https://raw.github.com/janikvonrotz/ActiveDirectory-Password-Change/master/doc/screenshot.png\" alt=\"Screenshot\"></p> <ul> <li>Install dependencies with <a href=\"https://github.com/bower/bower\">bower</a></li> <li>Run a bower update in the project root</li> <li>Add an ActiveDirectory user who has the right to reset a user&#39;s password</li> <li>Set variables in <code>index.php</code><ul> <li><code>$ldapuser</code></li> <li><code>$ldappwd</code></li> <li><code>$ldaphost</code></li> <li><code>$SecKey</code></li> </ul> </li> <li>Move the project on a webserver<ul> <li>Support for php ldap module must be enabled</li> <li>SSL certified when publish the site in the internet</li> </ul> </li> <li>Open the password change website like this <code>https://site.yourdomain.com/index.php?sec=[your secure key from $SecKey]</code></li> </ul>",
-  "main": "Gruntfile.js",
+  "version": "0.0.0",
+  "description": "<h1>ActiveDirectory-Password-Change</h1> <p><img src=\"https://raw.github.com/janikvonrotz/ActiveDirectory-Password-Change/master/doc/screenshot.png\" alt=\"Screenshot\"></p> <ul> <li>Install dependencies with <a href=\"https://github.com/bower/bower\">bower</a></li> <li>Run a bower update in the project root</li> <li>Add an ActiveDirectory user which has the right to reset a user&#39;s password</li> <li>Set variables in <code>index.php</code><ul> <li><code>$ldapuser</code></li> <li><code>$ldappwd</code></li> <li><code>$ldaphost</code></li> <li><code>$SecKey</code></li> </ul> </li> <li>Move the project on a webserver<ul> <li>Support for php ldap module must be enabled</li> <li>Use a SSL certified connection when publishing the site to the internet</li> </ul> </li> <li>Open the password change website like this <code>https://site.yourdomain.com/index.php?sec=[your secure key from $SecKey]</code></li> </ul>",
+  "main": "index.js",
   "directories": {
     "doc": "doc"
   },
   "dependencies": {
-    "chains-markdown": "~0.1.3",
-    "grunt": "~0.4.1"
   },
   "devDependencies": {},
   "scripts": {
@@ -22,10 +20,5 @@
   "license": "BSD-2-Clause",
   "bugs": {
     "url": "https://github.com/janikvonrotz/ActiveDirectory-Password-Change/issues"
-  },
-  "keywords": [
-    "activedirectory",
-    "password",
-    "change"
-  ]
+  }
 }
